assets/_globalCss.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';
@import '../public/assets/fonts/inter/inter.css';

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 0 0% 0%;
    --card: 0 0% 0%;
    --card-foreground: 0 0% 100%;
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 0%;
    --primary: 0 0% 0%;
    --primary-foreground: 0 0% 100%;
    --secondary: 0 0% 20%;
    --secondary-foreground: 0 0% 80%;
    --muted: 0 0% 40%;
    --muted-foreground: 0 0% 60%;
    --accent: 264 100% 50%;
    --accent-foreground: 244 100% 70%;
    --destructive: 348 78% 50%;
    --destructive-foreground: 348 98% 70%;
    --border: 0 0% 90%;
    --input: 0 0% 90%;
    --ring: 0 0% 0%;
    --radius: 0.25rem;
  }
}

:root {
  /* color definitions (legacy support) */
  --color-background: hsl(var(--background));
  --color-foreground: hsl(var(--foreground));
  --color-disabled: hsl(var(--muted));
  --color-notification: hsl(var(--accent));
  --color-background-alpha: hsl(0deg 0% 97%);
  --color-background-beta: hsl(0deg 0% 94%);
  --color-foreground-alpha: rgb(0 0 0 / 5%);

  /* size definitions (legacy support) */
  --border-radius: var(--radius);
  --margin: 1rem;
  --line-height: 1.3;
  --icon-size: calc(1rem * var(--line-height));
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: 0 0% 100%;
    --foreground: 0 0% 0%;
    --card: 0 0% 100%;
    --card-foreground: 0 0% 0%;
    --popover: 0 0% 0%;
    --popover-foreground: 0 0% 100%;
    --primary: 0 0% 100%;
    --primary-foreground: 0 0% 0%;
    --secondary: 0 0% 80%;
    --secondary-foreground: 0 0% 20%;
    --muted: 0 0% 60%;
    --muted-foreground: 0 0% 40%;
    --accent: 264 100% 50%;
    --accent-foreground: 244 100% 70%;
    --destructive: 348 78% 50%;
    --destructive-foreground: 348 98% 70%;
    --border: 0 0% 90%;
    --input: 0 0% 90%;
    --ring: 0 0% 0%;

    /* color definitions (legacy support) */
    --color-background: hsl(var(--foreground));
    --color-foreground: hsl(var(--background));
    --color-disabled: hsl(var(--muted));
    --color-notification: hsl(var(--accent));
    --color-background-alpha: hsl(0deg 0% 5%);
    --color-background-beta: hsl(0deg 0% 0%);
    --color-foreground-alpha: rgb(255 255 255 / 7%);
  }
}

body {
  font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: var(--line-height);
  color: var(--color-foreground);
  background-color: var(--color-background);
}

@supports (font-variation-settings: normal) {
  body {
    font-family: InterVariable, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
    font-optical-sizing: auto;
  }
}

@layer base {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-bold;
  }
}

a:link {
  color: var(--color-foreground);
  text-decoration: none;
}

a:visited {
  color: var(--color-foreground);
}

a:hover {
  color: var(--color-foreground);
  text-decoration: underline;
}

a:focus {
  color: var(--color-foreground);
}

a:active {
  color: var(--color-foreground);
}

